[MS200711-052546A]  Fix warnings about illegal reflective access, raised by checker framework